feat: endpoints for fetching data from CockroachDB
