# backend/models/stock.go
@@ -7,19 +7,19 @@ package models
 
 import "time"
 
-// Stock represents a stock rating entry.
+// StockRatings represents a stock rating entry.
 type StockRatings struct {
-	ID         int       `json:"id" db:"id"`
-	Ticker     string    `json:"ticker" db:"ticker"`
-	TargetFrom string    `json:"target_from" db:"target_from"`
-	TargetTo   string    `json:"target_to" db:"target_to"`
-	Company    string    `json:"company" db:"company"`
-	Action     string    `json:"action" db:"action"`
-	Brokerage  string    `json:"brokerage" db:"brokerage"`
-	RatingFrom string    `json:"rating_from" db:"rating_from"`
-	RatingTo   string    `json:"rating_to" db:"rating_to"`
-	Time       time.Time `json:"time" db:"time"`
-	CreatedAt  time.Time `json:"created_at" db:"created_at"`
+	ID         int       `json:"id" db:"id" example:"1"`
+	Ticker     string    `json:"ticker" db:"ticker" example:"AAPL"`
+	TargetFrom string    `json:"target_from" db:"target_from" example:"$150.00"`
+	TargetTo   string    `json:"target_to" db:"target_to" example:"$180.00"`
+	Company    string    `json:"company" db:"company" example:"Apple Inc."`
+	Action     string    `json:"action" db:"action" example:"target raised by"`
+	Brokerage  string    `json:"brokerage" db:"brokerage" example:"Goldman Sachs"`
+	RatingFrom string    `json:"rating_from" db:"rating_from" example:"Buy"`
+	RatingTo   string    `json:"rating_to" db:"rating_to" example:"Strong Buy"`
+	Time       time.Time `json:"time" db:"time" example:"2025-01-15T10:30:00Z"`
+	CreatedAt  time.Time `json:"created_at" db:"created_at" example:"2025-01-15T10:35:00Z"`
 }
 
 // ApiResponse represents the response from the external stock API.
@@ -30,10 +30,15 @@ type ApiResponse struct {
 
 // PageRequest represents the expected structure of the pagination request.
 type PageRequest struct {
-	Page int `json:"page" binding:"required"`
+	Page int `json:"page" binding:"required" example:"1"`
 }
 
 type BulkPageRequest struct {
-	StartPage int `json:"start_page" binding:"required"`
-	EndPage   int `json:"end_page" binding:"required"`
+	StartPage int `json:"start_page" binding:"required" example:"1"`
+	EndPage   int `json:"end_page" binding:"required" example:"100"`
+}
+
+type PaginationRequest struct {
+	PageNumber int `json:"page_number" binding:"required" example:"1"`
+	PageLength int `json:"page_length" binding:"required" example:"20"`
 }
